feat(timeslot): use resource ids only
Remove timeslot resource slug/handle semantics from the domain, API contracts, persistence mapping, public discovery, reservation history, and generated OpenAPI assertions. Add the forward migration that drops the resource slug column and constraints while keeping reservations tied to resource_id; also record the superseding ADR and update Spec Kit numbering artifacts for 019/020.

Tested: ./gradlew :timeslot:test --tests io.resrv.timeslot.domain.resource.ResourceTest --tests io.resrv.timeslot.application.resource.ResourceServiceTest --tests io.resrv.timeslot.application.discovery.PublicBookingDiscoveryServiceTest --tests io.resrv.timeslot.application.reservation.ReservationServiceTest

Tested: ./gradlew :timeslot:test --tests io.resrv.timeslot.api.TimeslotBookingApiIntegrationTest

Tested: ./gradlew :platform:test --tests io.resrv.platform.api.PlatformRuntimePackagingIntegrationTest

Tested: ./gradlew :timeslot:test --tests io.resrv.timeslot.adapter.out.persistence.TimeslotPersistenceAdapterTest

Tested: ./gradlew spotlessApply

Tested: ./gradlew rewriteDryRun

Tested: ./gradlew check