@@ -1,6 +1,7 @@
 package io.resrv.timeslot.adapter.out.persistence;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import io.resrv.shared.kernel.BusinessId;
@@ -13,7 +14,6 @@ import io.resrv.timeslot.application.settings.out.BusinessBookingSettingsQueryPo
 import io.resrv.timeslot.domain.resource.Resource;
 import io.resrv.timeslot.domain.resource.ResourceBookingOverrides;
 import io.resrv.timeslot.domain.resource.ResourceName;
-import io.resrv.timeslot.domain.resource.ResourceSlug;
 import io.resrv.timeslot.domain.resource.ResourceStatus;
 import io.resrv.timeslot.domain.schedule.DateResourceScheduleOverride;
 import io.resrv.timeslot.domain.schedule.ScheduleWindow;
@@ -34,6 +34,7 @@ import org.springframework.boot.data.jpa.test.autoconfigure.DataJpaTest;
 import org.springframework.boot.jdbc.test.autoconfigure.AutoConfigureTestDatabase;
 import org.springframework.boot.testcontainers.service.connection.ServiceConnection;
 import org.springframework.context.annotation.ComponentScan;
+import org.springframework.jdbc.core.JdbcTemplate;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
 import org.testcontainers.postgresql.PostgreSQLContainer;
@@ -61,6 +62,8 @@ class TimeslotPersistenceAdapterTest {
 
     @Autowired private ResourceScheduleQueryPort scheduleQueryPort;
 
+    @Autowired private JdbcTemplate jdbcTemplate;
+
     @Test
     void savesAndLoadsSettingsResourceWeeklyScheduleAndDateOverride() {
         final var businessId = BusinessId.create();
@@ -78,7 +81,6 @@ class TimeslotPersistenceAdapterTest {
                 Resource.create(
                         businessId,
                         new ResourceName("Room A"),
-                        new ResourceSlug("room-a"),
                         "Room description",
                         new ResourceBookingOverrides(
                                 new SlotDuration(60), new HoldTtl(5), new CancellationWindow(120)),
@@ -107,14 +109,12 @@ class TimeslotPersistenceAdapterTest {
         assertEquals(10, foundSettings.holdTtl().minutes());
 
         final var foundResource =
-                resourceQueryPort
-                        .findByBusinessIdAndSlug(businessId, new ResourceSlug("room-a"))
-                        .orElseThrow();
+                resourceQueryPort.findByBusinessIdAndId(businessId, resource.id()).orElseThrow();
         assertEquals(resource.id(), foundResource.id());
         assertEquals(businessId, foundResource.businessId());
         assertEquals(60, foundResource.bookingOverrides().slotDuration().minutes());
 
-        assertTrue(resourceQueryPort.findByBusinessIdAndId(businessId, resource.id()).isPresent());
+        assertTrue(resourceQueryPort.findById(resource.id()).isPresent());
 
         final var foundWeekly =
                 scheduleQueryPort
@@ -123,7 +123,7 @@ class TimeslotPersistenceAdapterTest {
         assertEquals(businessId, foundWeekly.businessId());
         assertEquals(resource.id(), foundWeekly.resourceId());
         assertEquals(2, foundWeekly.windows().size());
-        assertEquals(LocalTime.of(9, 0), foundWeekly.windows().get(0).startTime());
+        assertEquals(LocalTime.of(9, 0), foundWeekly.windows().getFirst().startTime());
 
         final var foundOverride =
                 scheduleQueryPort.findDateOverride(businessId, resource.id(), date).orElseThrow();
@@ -140,7 +140,6 @@ class TimeslotPersistenceAdapterTest {
                 Resource.create(
                         businessId,
                         new ResourceName("Room B"),
-                        new ResourceSlug("room-b"),
                         null,
                         ResourceBookingOverrides.none(),
                         NOW);
@@ -195,7 +194,6 @@ class TimeslotPersistenceAdapterTest {
                 Resource.create(
                         businessId,
                         new ResourceName("Room C"),
-                        new ResourceSlug("room-c"),
                         "Original",
                         ResourceBookingOverrides.none(),
                         NOW);
@@ -204,7 +202,6 @@ class TimeslotPersistenceAdapterTest {
         final var replaced =
                 resource.replaceDetails(
                         new ResourceName("Room C Updated"),
-                        new ResourceSlug("room-c-updated"),
                         "Updated",
                         new ResourceBookingOverrides(
                                 new SlotDuration(45), new HoldTtl(5), new CancellationWindow(180)),
@@ -215,7 +212,6 @@ class TimeslotPersistenceAdapterTest {
                 resourceQueryPort.findByBusinessIdAndId(businessId, resource.id()).orElseThrow();
         assertEquals(resource.id(), found.id());
         assertEquals("Room C Updated", found.name().value());
-        assertEquals("room-c-updated", found.slug().value());
         assertEquals(45, found.bookingOverrides().slotDuration().minutes());
         assertEquals(ResourceStatus.ACTIVE, found.status());
         assertEquals(1, resourceQueryPort.findActiveByBusinessId(businessId).size());
@@ -223,5 +219,48 @@ class TimeslotPersistenceAdapterTest {
         resourceCommandPort.save(found.deactivate(NOW.plusSeconds(120)));
 
         assertTrue(resourceQueryPort.findActiveByBusinessId(businessId).isEmpty());
+    }
+
+    @Test
+    void resourceSlugSchemaArtifactsAreRemoved() {
+        assertFalse(columnExists("timeslot", "resource", "slug"));
+        assertFalse(constraintExists("timeslot", "resource", "uq_timeslot_resource_business_slug"));
+        assertFalse(
+                constraintExists("timeslot", "resource", "ck_timeslot_resource_slug_not_blank"));
+        assertTrue(columnExists("timeslot", "reservation", "resource_id"));
+    }
+
+    private boolean columnExists(final String schema, final String table, final String column) {
+        final var count =
+                jdbcTemplate.queryForObject(
+                        """
+                        SELECT count(*)
+                        FROM information_schema.columns
+                        WHERE table_schema = ?
+                          AND table_name = ?
+                          AND column_name = ?
+                        """,
+                        Integer.class,
+                        schema,
+                        table,
+                        column);
+        return count != null && count > 0;
+    }
+
+    private boolean constraintExists(final String schema, final String table, final String name) {
+        final var count =
+                jdbcTemplate.queryForObject(
+                        """
+                        SELECT count(*)
+                        FROM information_schema.table_constraints
+                        WHERE table_schema = ?
+                          AND table_name = ?
+                          AND constraint_name = ?
+                        """,
+                        Integer.class,
+                        schema,
+                        table,
+                        name);
+        return count != null && count > 0;
     }
 }
